--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Vegienomicon</a>
+      <a class="navbar-brand" href="#">Vegie<span style= 'color: #FFFED9;' >nom</span>icon</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
