--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,3 +1,5 @@
+<% will_paginate @places %>
+
 <% @places.each do |place| %>
 
   <div class="booyah-box col-xs-10 col-xs-offset-1">
@@ -6,3 +8,4 @@
     <p><%= place.description %></p><br />
   </div>
 <% end %>
+
