--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,5 +1,3 @@
-<% will_paginate @places %>
-
 <% @places.each do |place| %>
 
   <div class="booyah-box col-xs-10 col-xs-offset-1">
@@ -8,4 +6,7 @@
     <p><%= place.description %></p><br />
   </div>
 <% end %>
+<div class="apple_pagination">
+  <%= will_paginate @places %>
+</div>
 
