--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -5,8 +5,8 @@
   -webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
   box-shadow: 1px 1px 2px 0 #d0d0d0;
   background: #fff;
-  border: 1px solid #ccc;
-  border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
+  border: 2px solid #C0FFAB;
+  border-color: #90E0AF #5A8A6C #5A8A6C #90E0AF;
   margin-top:10px;
   margin-bottom:15px;
   padding: 20px;
