--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,4 +1,6 @@
+<div class="booyah-box col-xs-10 col-xs-offset-1">
 <h2>Change your password</h2>
+<br>
 
 <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
   <%= f.error_notification %>
@@ -12,8 +14,10 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Change my password" %>
+    <%= f.button :submit, "Change my password", class: 'btn btn-success' %>
   </div>
+  <br>
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
