--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,7 @@
+<div class="booyah-box col-xs-10 col-xs-offset-1">
+
 <h2>Sign up</h2>
+<br>
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
@@ -10,8 +13,10 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
+    <br>
+    <%= f.button :submit, "Sign up", class: 'btn btn-success' %>
   </div>
 <% end %>
-
+<br>
 <%= render "devise/shared/links" %>
+</div>
