Added page to show place details

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -6,7 +6,7 @@
   box-shadow: 1px 1px 2px 0 #d0d0d0;
   background: #fff;
   border: 2px solid #C0FFAB;
-  border-color: #90E0AF #5A8A6C #5A8A6C #90E0AF;
+  border-color: #88BFAF #5C8277 #5C8277 #88BFAF;
   margin-top:10px;
   margin-bottom:15px;
   padding: 20px;
@@ -15,6 +15,10 @@
 h1, h2, h3, h4, h5, h6 {
   margin: 0;
   padding: 0;
+}
+
+h1 {
+  color: #88BFAF;
 }
 
 body {
