--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -4,7 +4,9 @@
 <br><br>
 <p><%= @place.description %></p>
 <div class="pull-right">
-  <%= link_to 'Update', edit_place_path(@place), class: 'btn btn-success' %>
+  <% if current_user && current_user == @place.user %>
+    <%= link_to 'Edit', edit_place_path(@place), class: 'btn btn-primary' %>
+  <% end %>
   <%= link_to 'Remove', place_path(@place), method: :delete, data: {confirm: 'Are you sure you want to delete this?'},class: 'btn btn-danger' %>
 </div>
 </div>
