--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -113,3 +113,11 @@ body {
     height: 1%; }
   *:first-child + html .digg_pagination {
     overflow: hidden; }
+
+.field_with_errors {
+  color: #ff3333;
+  background-color: #FFEEEE;
+  border-radius: 3px;
+  padding: 8px;
+}
+
