Set up database connections for comments

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -34,7 +34,7 @@ body {
 }
 
 .navbar-inverse .navbar-brand {
-  color: #D9FFEB;
+  color: #1C4A66;
   font-family: 'Amatic SC', cursive;
   font-weight: 500;
   letter-spacing: 0.3px;
