--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
       <ul class="nav navbar-nav">
         <li>
           <%= link_to new_place_path do %>
-          <span style = 'color: white'> <i class="glyphicon glyphicon-plus"></i>
+          <span style = 'color: #FEFFC7'> <i class="glyphicon glyphicon-plus"></i>
           New Place</span>
           <% end %>
         </li>
