--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -4,12 +4,6 @@
 <br><br>
 <p><%= @place.description %></p>
 
-<% @place.photos.each do |photo| %>
-  <%= image_tag photo.picture %>
-  <%= photo.caption %>
-  <small>- <%= photo.user.email %></small>
- <% end %>
-
 <% if @place.latitude.present? && @place.longitude.present? %>
     
   <script>
@@ -40,23 +34,13 @@
   <% if current_user && current_user == @place.user %>
     <%= link_to 'Edit', edit_place_path(@place), class: 'btn btn-primary' %>
     <%= link_to 'Remove', place_path(@place), method: :delete, data: {confirm: 'Are you sure you want to delete this?'},class: 'btn btn-danger' %>
-  <% end %>
-  
+  <% end %> 
 </div>
 </div>
 <div class="clear"></div>
 
-<div class="col-xs-10 col-xs-offset-1">
-<%= simple_form_for @photo, url: place_photos_path(@place) do |f| %>
-  <%= f.input :picture %>
-  <%= f.input :caption %>
-  <br>
-  <%= f.submit "Add a Photo", class: 'btn btn-info' %>
-<% end %>
-</div>
 
-
-<!-- Modal -->
+<!-- Comment Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -78,14 +62,37 @@
   </div>
 </div>
 
-<div class="col-xs-10 col-xs-offset-1">
-<h1 class="pull-left">Comments</h1>
-<button class="btn btn-success btn-lg pull-right" data-toggle="modal" data-target="#myModal">
+<!-- Photo Modal -->
+<div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title" id="myModalLabel">Add a Photo</h4>
+      </div>
+      <%= simple_form_for @photo, url: place_photos_path(@place) do |f| %>
+        <div class="modal-body">     
+          <%= f.input :picture %>
+          <%= f.input :caption %>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <%= f.submit "Add a Photo", class: 'btn btn-info' %>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
+
+<div class="col-xs-10 col-xs-offset-1 butpadding">  
+  <h1 class="pull-left">Comments</h1>
+  <button class="btn btn-success btn-lg pull-right" data-toggle="modal" data-target="#myModal">
   Add a Comment
-</button>
+  </button>
 </div>
 
 <div class="clear"></div>
+
 
 <% @place.comments.each do |comment| %>
   <div class="col-xs-12 col-sm-6">
@@ -98,3 +105,23 @@
     </blockquote>
   </div>
 <% end %>
+<div class="clear"></div>
+
+<div class="col-xs-10 col-xs-offset-1 butpadding">
+  <hr>
+  <h1 class = "pull-left">Pictures</h1>
+  <button class="btn btn-info btn-lg pull-right" data-toggle="modal" data-target="#myModal2">
+  Add a Photo
+  </button>
+<div>
+<div class="clear"></div>
+
+
+<% @place.photos.each do |photo| %>
+  <div class="col-xs-12 col-sm-6 thumbnail">
+    <%= image_tag photo.picture, class: "img-responsive" %>
+    <%= photo.caption %><br>
+    <small class = "pull-right">- <%= photo.user.email %></small>
+  </div>
+<% end %>
+
