--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -155,3 +155,20 @@ blockquote p {
   margin-bottom: 8px;
 }
 
+.indexpic {
+  max-width: 160px;
+  max-height: 160px;
+}
+
+
+.thumbnail {
+  border: 2px solid #9DBFB5;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+
+.imgindex {
+  max-height: 400px;
+  max-width: 400px;
+  border-radius: 5px;
+}
