--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -10,7 +10,7 @@
     <% end %>
 
     <% if place.comments.present? %>
-      <div class="col-xs-12">
+      <div class="col-xs-12 col-sm-7">
         <blockquote>
           <% if place.comments.last.humanized_rating.present? %>
             <b><%= place.comments.last.humanized_rating %></b> -
@@ -19,6 +19,12 @@
           <small><%= place.comments.last.user.email %></small>
         </blockquote>
      </div>
+    <% end %>
+
+    <% if place.photos.present? && place.photos.last.picture.present? %>
+      <div class="col-xs-12 col-sm-4">
+        <%= image_tag place.photos.last.picture, class: "thumbnail indexpic" %>
+      </div>
     <% end %>
 
   </div>
