Adjucted the email mailer

--- a/app/views/notification_mailer/comment_added.html.erb
+++ b/app/views/notification_mailer/comment_added.html.erb
@@ -1,6 +1,7 @@
 <p>Hey There!</p>
 <p>
-  Congrats! <b>A comment as been added on Vegienomicon</b>
+  Congrats! <b>A comment as been added on Vegienomicon</b>.
+  Check it out <%= link_to 'here', place_url(@place) %>
 </p>
 
 See ya,<br>
