--- a/app/views/notification_mailer/comment_added.text.erb
+++ b/app/views/notification_mailer/comment_added.text.erb
@@ -1,6 +1,8 @@
 Hey There!
 
-Congrats. A comment has been added to Vegienomicon
+Congrats. A comment has been added to Vegienomicon.
+
+Check it out, <%= place_url(@place) %>
 
 See ya,
 Erika
