added image slider to root page

--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -9,21 +9,21 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <%= image_tag 'slider1.jpg' %>
+      <%= image_tag 'slider1.jpg', class: 'img-responsive' %>
       <div class="carousel-caption">
-        Find the best vegetarian meals!
+        find the best vegetarian meals
       </div>
     </div>
     <div class="item">
-      <%= image_tag 'slider2.jpg'%>
+      <%= image_tag 'slider2.jpg', class: 'img-responsive' %>
       <div class="carousel-caption">
-        Community contributed vegetarian suggestions at every restaurant!
+        community contributed vegetarian suggestions at every restaurant
       </div>
     </div>
     <div class="item">
-      <%= image_tag 'slider3.jpg'%>
+      <%= image_tag 'slider3.jpg', class: 'img-responsive' %>
       <div class="carousel-caption">
-        Discover delicious options no matter the restaurant!
+        discover delicious options no matter where you are
       </div>
     </div>
   </div>
