--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -31,6 +31,7 @@ body {
   border-radius: 0;
   box-shadow: 0px 2px 5px #2a2a2a;
   border-style: hidden;
+  margin-bottom: 0;
 }
 
 .navbar-inverse .navbar-brand {
@@ -171,4 +172,25 @@ blockquote p {
   max-height: 400px;
   max-width: 400px;
   border-radius: 5px;
+}
+
+.carousel-inner > .item > img, .carousel-inner > .item > a > img {
+  height: 100%;
+  width: 100%;
+}
+
+.carousel-caption {
+  font-family: 'Amatic SC', cursive;
+  font-size: 30px;
+  font-weight: 600;
+  color: #B1F29B;
+  text-shadow: rgba(0,0,0,0.8s5) 2px 2px;
+  background-color: rgba(0,0,0,0.5);
+  width:100%;
+  position:absolute;
+  left:0;
+}
+
+.carousel {
+  box-shadow: 0px 3px 8px #2a2a2a;
 }
