--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -31,7 +31,11 @@ body {
   border-radius: 0;
   box-shadow: 0px 2px 5px #2a2a2a;
   border-style: hidden;
-  margin-bottom: 0;
+  margin-bottom: 0; 
+}
+
+.navbar-inverse .navbar-nav > li > a {
+    color: #FEFFC7;
 }
 
 .navbar-inverse .navbar-brand {
@@ -39,7 +43,7 @@ body {
   font-family: 'Amatic SC', cursive;
   font-weight: 500;
   letter-spacing: 0.3px;
-  font-size: 46px;
+  font-size: 40px;
 }
 
 .apple_pagination {
@@ -193,4 +197,8 @@ blockquote p {
 
 .carousel {
   box-shadow: 0px 3px 8px #2a2a2a;
+}
+
+.links a {
+  color: #FEFFC7
 }
