--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,15 +27,15 @@
       <ul class="nav navbar-nav">
         <li>
           <%= link_to new_place_path do %>
-          <span style = 'color: #FEFFC7'> <i class="glyphicon glyphicon-plus"></i>
-          New Place</span>
+          <i class="glyphicon glyphicon-plus"></i>
+          New Place
           <% end %>
         </li>
       </ul>
       
       <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
-          <li><%= link_to 'My Profile', user_path(current_user) %></li>
+          <li><%= link_to 'My Profile', user_path(current_user)%></li>
           <li><%= link_to 'Sign out', destroy_user_session_path, method: :delete %></li>
         <% else %>
           <li><%= link_to 'Sign in', new_user_session_path %></li>
