Added minor touch ups to styles

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -206,3 +206,15 @@ blockquote p {
 .text-center {
   padding: 5px;
 }
+
+.user-box {
+  word-wrap: break-word;
+}
+
+.u-em {
+  font-size: 26px;
+  color: #88BFAF;
+  margin: 0;
+  padding: 0;
+  text-decoration: underline;
+}
