--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,8 +3,8 @@
     <%= image_tag 'user.png' %>
   </div>
 
-  <div class="col-xs-8">
-    <h1><%= @user.email %></h1>
+  <div class="col-xs-8 user-box">
+    <div class="u-em"><%= @user.email %></div>
     <h3>Member Since: <%= @user.created_at.strftime("%B %d, %Y") %></h3>
     <h4><%= @user.comments.count %> total comments</h4>
     <h4><%= @user.comments.where(rating: '5_stars').count %> total 5 star reviews</h4>
@@ -12,26 +12,9 @@
   <div class="clear"></div>
 </div>
 <div class="clear"></div>
-<br><br>
-<h1 class="text-center">My Comments </h1>
-<br><br>
-<% @user.comments.each do |comment| %>
-  <div class="col-xs-12 col-sm-6">
-    <h2 class ="text-center"><%= link_to comment.place.name, place_path(comment.place) %></h2>
-       <blockquote>
-      <% if comment.humanized_rating.present? %>
-        <b><%= comment.humanized_rating %></b> -
-      <% end %>
-      <%= comment.message %>
-      <small><%= comment.user.email %></small>
-    </blockquote>
-  </div>
-<% end %>
-
-<div class="clear"></div>
-<br><br>
+<br>
 <h1 class="text-center">My Places</h1>
-<br><br>
+<br>
 <% @user.places.each do |place| %>
   <div class="booyah-box col-xs-10 col-xs-offset-1">
     <h1><%= link_to place.name, place_path(place) %></h1>
@@ -58,5 +41,22 @@
         <%= image_tag place.photos.last.picture, class: "thumbnail indexpic" %>
       </div>
     <% end %>
+  </div>
+<% end %>
+
+<div class="clear"></div>
+<br>
+<h1 class="text-center">My Comments </h1>
+<br>
+<% @user.comments.each do |comment| %>
+  <div class="col-xs-12 col-sm-4 user-box">
+    <h2 class ="text-center"><%= link_to comment.place.name, place_path(comment.place) %></h2>
+       <blockquote>
+      <% if comment.humanized_rating.present? %>
+        <b><%= comment.humanized_rating %></b> -
+      <% end %>
+      <%= comment.message %>
+      <small><%= comment.user.email %></small>
+    </blockquote>
   </div>
 <% end %>
